--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "natural": "~0.1.21",
     "string": "~1.4.0",
     "moment": "~2.0.0",
-    "postmark": "~0.1.8"
+    "postmark": "~0.1.8",
+    "multipart": "latest"
   },
   "engines": {
     "node": "0.8.x",
